fix css issues with view properties page on mobile size

--- a/css/view-properties.css
+++ b/css/view-properties.css
@@ -22,49 +22,12 @@ body {
 }
 
 #property-chart {
-  padding-top: 10px;
+  padding: 10px;
 }
 
-#properties {
-  padding-bottom: 20px;
-}
-/* carouselExampleIndicators */
 #carouselExampleIndicators {
-  width: 95vw;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.chart {
-  max-width: 95vw;
-  max-height: auto;
-  padding: 20px;
-}
-
-@media (min-width: 768px) {
-  #carouselExampleIndicators {
-    width: 75vw;
-  }
-}
-
-@media (min-width: 992px) {
-  #carouselExampleIndicators {
-    width: 50vw;
-  }
-}
-
-@media (min-width: 768px) {
-  .chart {
-    width: 75vw;
-    margin: 0 auto;
-    padding: 10px;
-  }
-}
-
-@media (min-width: 992px) {
-  .chart {
-    width: 50vw;
-  }
+  padding: 10px;
+  margin: 10px;
 }
 
 .centered {
@@ -95,5 +58,10 @@ body {
 
 /* adding this margin so footer doesn't overlap container MC */
 .view-prop-container {
+  margin-top: 10px;
   margin-bottom: 130px;
+}
+
+.margin-bottom {
+  margin-bottom: 10px;
 }
